--- a/package.json
+++ b/package.json
@@ -39,12 +39,10 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.5.1",
     "formik": "^2.4.4",
     "modern-normalize": "^2.0.0",
-    "nanoid": "^4.0.2",
-    "prop-types": "^15.8.1",
     "react-redux": "^8.1.3",
-    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.7",
     "yup": "^1.2.0",
     "yup-phone-lite": "^2.0.1"
